--- a/Pendat.html
+++ b/Pendat.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>&lt;no title&gt; &#8212; My sample book</title>
+    <title>230411100124</title>
   
   
   
@@ -376,7 +376,7 @@
 <div id="searchbox"></div>
                 <article class="bd-article">
                   
-  <p>#Tugas 1 Pendata</p>
+  <h1>Tugas - Ahmad Afha Assalami (230411100124)</h1>
 
     <script type="text/x-thebe-config">
     {
