--- a/Pendat.html
+++ b/Pendat.html
@@ -410,7 +410,7 @@
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Content with notebooks</p>
+<!--         <p class="prev-next-title">Content with notebooks</p> -->
       </div>
     </a>
     <a class="right-next"
@@ -418,7 +418,7 @@
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">Notebooks with MyST Markdown</p>
+<!--         <p class="prev-next-title">Notebooks with MyST Markdown</p> -->
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
