--- a/DBaver.html
+++ b/DBaver.html
@@ -909,7 +909,7 @@ Name: count, dtype: int64
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Welcome to your Jupyter Book</p>
+        <p class="prev-next-title">Back</p>
       </div>
     </a>
 </div>
