--- a/UAS_Pendat.html
+++ b/UAS_Pendat.html
@@ -1578,7 +1578,12 @@ Random Forest          5    0.9649     0.9756  0.9302    0.9524
 </div>
                   
 <h1>🩺 Deployment Form Prediksi Kanker Payudara</h1>
-<h2>🔗 https://deploy-breast-cancer.onrender.com/ 🔗</h2>
+<h2>
+  🔗 <a href="https://deploy-breast-cancer.onrender.com/" target="_blank" style="color: inherit; text-decoration: underline;">
+    https://deploy-breast-cancer.onrender.com/
+  </a> 🔗
+</h2>
+
 
     <script type="text/x-thebe-config">
     {
